# ROSDemonstrationApplication

./: CMakeLists.txt  README.md  package.xml
src/: demonstration_application.cpp  kinect.cpp
